package com.example.recipeShoppingList.shoppingList

import com.example.recipeShoppingList.AbstractItemList

class ShoppingList() : AbstractItemList() {
}