@startuml
hide empty members



class ItemListBuilder #lightblue{
    + addRecipeUnit()
    + addInstructions()
    + addDescription()
    + build()
}
ItemListBuilder ..> Recipe: <<create>>
ItemListBuilder ..> ShoppingList: <<create>>

class ShoppingList #lightblue
ShoppingList "0..*" --|> "1" AbstractItemList

class Recipe #lightblue {
    - instructions
    - description
    + getInstructions()
    + setInstructions()
    + getDescription()
    + setDescription()
}
Recipe "0..*" --|> "1" AbstractItemList
Recipe -- Quantity

abstract class AbstractItemList #lightblue{
   - name: const str
   - itemQuantity: [item: Quantity]
   - dataBaseName: const str
   + addItem()
   + removeItem()
   + getItems()
   + storeList()
   + changeList()
   + getName()
}
AbstractItemList o-- Item

class Item #lightblue
Item --|> InterfaceItem

interface InterfaceItem #lightblue

class Quantity #lightblue{
    - unit: Unit
    - quantity: int
    + getUnit()
    + getQuantity()
}

legend bottom right
| **Color**         | **Layer**             |
| <#lightblue>      | Application layer     |
end legend
@enduml

# Decisions:
    - Unit is not going to be an explicit class anymore. It adds a lot of complexity while having
    very few advantages.
    - Whether quantity stays an explicit class is yet to decide. It decouples from using undefined
    dictionaries at least. So it kind of makes sense. The disadvantages are not that high either.
    So it may stay for the moment. If there are any complications with it in implementation, it will
    probably be get erased.